<resources>
    <string name="app_name">MoviesTube</string>
    <string name="action_settings">Settings</string>

    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="popular_people">Popular People</string>
    <string name="discover">Discover</string>
    <string name="watchlist">Watchlist</string>
    <string name="people">People</string>

    <string name="latest">Latest</string>
    <string name="now_playing">Now playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="airing_today">Airing today</string>
    <string name="on_the_air">On the air</string>

    <string name="info">Info</string>
    <string name="cast">Cast</string>
    <string name="reviews">Reviews</string>
    <string name="seasons">Seasons</string>

    <string name="original_title">Original title</string>
    <string name="status">Status</string>
    <string name="original_language">Original language</string>
    <string name="runtime">Runtime</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="network">Network</string>

    <string name="as_character">as</string>

    <string name="trailers">Trailers</string>
    <string name="similar_movies">Similar movies</string>
    <string name="similar_tv_shows">Similar TV shows</string>
    <string name="recommendations">You may also like</string>

    <string name="season">season</string>
    <string name="episodes">episodes</string>
    <string name="episode">episode</string>

    <string name="gender">Gender</string>
    <string name="known_credits">Known credits</string>
    <string name="birthday">Birthday</string>
    <string name="deathday">Deathday</string>
    <string name="official_site">Official site</string>
    <string name="place_of_birth">Place of birth</string>
    <string name="also_known_as">Also known as</string>

    <string name="no_biography">We don\'t have biography for</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unknown">Unknown</string>
    <string name="images">Images</string>
    <string name="known_for">Known for</string>

    <string name="search_hint">Search TMDb</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>

    <string name="of">of</string>

    <string name="nothing_found">Nothing found</string>
    <string name="error_description">Could not load data</string>
    <string name="try_again">Try again</string>
    <string name="movies_watchlist_empty">Unfortunately you have not added any movies to watchlist yet</string>
    <string name="tv_shows_watchlist_empty">Unfortunately you have not added any TV shows to watchlist yet</string>

    <string name="added_to_watchlist">Added to watchlist</string>
    <string name="removed_from_watchlist">Removed from watchlist</string>

    <string name="share">Share</string>
    <string name="send_to">Send to</string>
    <string name="view_on_tmdb">View on TMDb</string>
    <string name="view_on_imdb">View on IMDb</string>

    <string-array name="movies_sort_options">
        <item>Popularity</item>
        <item>Rating</item>
        <item>Release date</item>
        <item>Revenue</item>
    </string-array>

    <string-array name="tv_shows_sort_options">
        <item>Popularity</item>
        <item>Rating</item>
        <item>First air date</item>
    </string-array>

    <string-array name="media_type">
        <item>Movies</item>
        <item>TV Shows</item>
    </string-array>

</resources>
